--- a/style.css
+++ b/style.css
@@ -31,9 +31,12 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: border-radius .5s;
 }
 
-
+.ex-3-square:hover{
+    border-radius: 50%;
+}
 
 /* ESERCIZIO 4 */
 
@@ -41,7 +44,15 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: background-color 1s;
 }
+
+.ex-4-square:hover{
+    background-color: #F5F5F5;
+}
+
+/* ESERCIZIO 5 */
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
