--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* ESERCIZIO 1 */
+/* EXERCISE 1 */
 
 .ex-1-square {
     width: 100px;
@@ -11,7 +11,7 @@
     background-color: red;
 }
 
-/* ESERCIZIO 2 */
+/* EXERCISE 2 */
 
 .ex-2-square {
     width: 100px;
@@ -25,7 +25,7 @@
 }
 
 
-/* ESERCIZIO 3 */
+/* EXERCISE 3 */
 
 .ex-3-square {
     width: 100px;
@@ -38,7 +38,7 @@
     border-radius: 50%;
 }
 
-/* ESERCIZIO 4 */
+/* EXERCISE 4 */
 
 .ex-4-square {
     width: 100px;
@@ -51,17 +51,39 @@
     background-color: #F5F5F5;
 }
 
-/* ESERCIZIO 5 */
+/* EXERCISE 5 */
 
 .ex-5-square {
     margin: 20px;
     width: 60px;
     height: 60px;
     background: red;
+    transition: width 1s, height 1s;
 }
+
+.ex-5-square:hover{
+    width: 80px;
+    height: 80px;
+}
+
+.ex-5-square:hover:active{
+    width: 40px;
+    height: 40px;
+}
+
+/* EXERCISES 6, 7, 8 */
+
+
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
+
+.ex-6-img:hover{
+    filter: grayscale()
+}
+
+
+/* EXERCISE 9 */
 
 .ex-9-img {
     margin: 50px 100px;
