--- a/style.css
+++ b/style.css
@@ -111,12 +111,42 @@
 
 .ex-10-icon {
     font-size: 60px;
+    animation: spin 1s infinite linear;
 }
 
+@keyframes spin{
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+/* EXERCISE 11 */
 
 .ex-11-icon {
     font-size: 60px;
+
 }
+
+@keyframes spin-3_4{
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(270deg);
+    }
+
+}
+
+.ex-11-icon:hover{
+    animation: spin-3_4 1s alternate infinite;
+}
+
+
+/* EXERCISES 12, 13 */
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
